added html and assets

--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Coming Soon</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        padding-top: 50px;
-        font-size: 36px;
-        font-weight: bold;
-      }
-    </style>
-  </head>
-  <body>
-    Coming Soon!
-  </body>
+<html data-bs-theme="light" lang="en" style="font-family: 'Open Sans', sans-serif;--bs-body-font-size: 1rem;">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>brandisbrandisbrand</title>
+    <meta name="description" content="We travel the world.
+We like to build stuff.">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "brandisbrandisbrand_rework",
+            "url": "https://brandisbrandisbrand.com"
+        }
+    </script>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/Navbar-Centered-Links-icons.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm fixed-top navbar-light" style="background: var(--bs-light-bg-subtle);max-width: 720px;margin-right: auto;margin-left: auto;">
+        <div class="container-fluid"><a class="navbar-brand" href="https://brandisbrandisbrand.com"><img src="assets/img/brandisbrandisbrand.svg" style="max-width: 100%;" width="229" height="29"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="https://brandisbrandisbrand.com/index.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://pixelfed.social/cyclingtogether" target="_blank">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/masto/masto.html">Archive</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/video.html">Video</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container" style="max-width: 720px;">
+        <section id="we" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;padding-top: 50px;">
+            <h1 style="font-family: 'Annie Use Your Telescope', serif;">Marc &amp; Fiona</h1><img src="assets/img/we.jpg" style="width: 100%;">
+            <p style="padding-top: 10px;">1981 (he/him)<br>Artist, thinker, maker, hacker.<br><br>1978 (she/her)<br>Mother of two, tailoress, mediamatic, photographer<br><br> Our goal is to travel sustainable and sharing good moments with good people. <br>We love nature, freedom, privacy, exchanging knowledge and visions, having discussions.<br><br>We both are skilled in handcrafts, sewing, welding, metalwork, mechanics, <br>woodwork, arts, multimedia, electronics, opensource software and linux <br>computers... all in all we love to build and create stuff.<br>We both eat only gluten-free and mostly vegan.</p>
+        </section>
+        <section id="bikes" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
+            <h1 style="font-family: 'Annie Use Your Telescope', serif;">Madmax &amp; Pauline</h1><img src="assets/img/bikes.jpg" style="width: 100%;">
+            <p style="padding-top: 10px;">The frames are handmade by Mathias Scherer in Kleinblittersdorf (Germany) and should last a lifetime. We love our Garbaruk components, Infinity seats, Hope brakes, Chris King bearings, Son dynamos and Sinwave Usb converters.<br><br>There are many selfmade parts like bags (sewed in France and Spain), racks (rear racks found in the woods in Portugal and modified with hammer and saw) and custom bottle cages.<br><br>With some of our gear we are very happy, other stuff needed heavy modification or broke after a short time.<br>Nowadays you can not relay on a brands name or high price=quality.<br>We made bad experiences with lifetime warranty and warranty of some ridiculous high priced products. Its a shame for these big brands which only seem to feed their shareholders.<br><br>One day we will start selling reliable, handmade high-quality gear made by us and our experience.</p>
+        </section>
+        <section id="why" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
+            <h1 style="font-family: 'Annie Use Your Telescope', serif;">Why</h1><img src="assets/img/why.jpg" style="width: 100%;">
+            <p style="padding-top: 10px;">Life is too short to keep running in the hamster wheel until you feel old.<br>Maybe the lockdown in 2020 let us realize that no one else is responsible to turn our dreams to reality.<br>We sold everything and left the country where people voted against clean drinking water and voted against sustainable agriculture. We started a nomads life in search of places where we can use our skills and energy for something more sense full.</p>
+        </section>
+        <section id="contact" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
+            <h1 style="font-family: 'Annie Use Your Telescope', serif;">Contact</h1><img src="assets/img/contact.jpg" style="width: 100%;">
+            <p style="padding-top: 10px;">Email / Deltachat:<br>marc brandisbrandisbrand com<br>matrix: @magdesign:tchncs.de<br>Signal: +35 1925858525<br>Whatsapp: +35 1961218077<br><br></p>
+        </section>
+        <section id="donation" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
+            <h1 style="font-family: 'Annie Use Your Telescope', serif;">Support / Donation</h1>
+            <p style="padding-top: 10px;">Btc:<br><sub>bc1qpfljs02fmad7575fs2skjz5u02plzqw0g3xt6d</sub><br><br>Iban €:<br>GB27REVO00997077949372<br>Swift: REVOGB21<br><br>Iban CHF:<br>CH5306300336780940564<br><br>Revolut: @brandisbrand<br><br>Paypal:<br>boost@brandisbrandisbrand.com<br><br><br><br></p>
+        </section>
+    </div>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
+
 </html>
