--- a/video.html
+++ b/video.html
@@ -28,7 +28,7 @@ We like to build stuff.">
         </div>
     </nav>
     <div class="container" style="margin-top: 60px;max-width: 720px;">
-        <p style="margin: 8px;"><br>Visit our&nbsp;<a href="https://odysee.com/@sharinggoodmoments:2" target="_blank">odysee</a> video channel to subscribe, comment and like.<br><br>Listen to the&nbsp;&nbsp;<a href="https://cast.postmarketos.org/episode/39-Interview-magdesign/" target="_blank">postmarketos linux podcast</a>&nbsp;and watch the video about <a href="https://odysee.com/@sharinggoodmoments:2/linuxmobile:4" target="_blank">navigating with linuxmobile</a>.<br>^^^ Nerds only ^^^</p>
+        <p style="margin: 8px;"><br>Visit our&nbsp;<a href="https://odysee.com/@sharinggoodmoments:2" target="_blank">odysee</a> video channel (youtube coming soon...) to subscribe, comment and like.<br><br>Listen to the&nbsp;&nbsp;<a href="https://cast.postmarketos.org/episode/39-Interview-magdesign/" target="_blank">postmarketos linux podcast</a>&nbsp;and watch the video about <a href="https://odysee.com/@sharinggoodmoments:2/linuxmobile:4" target="_blank">navigating with linuxmobile</a>.<br>^^^ Nerds only ^^^</p>
         <div class="row d-lg-flex justify-content-lg-center">
             <div class="col-md-12" style="margin-left: auto;margin-right: auto;"><iframe id="odysee-iframe" width="360px" height="202px" src="https://odysee.com/$/embed/@sharinggoodmoments:2/malweg_firstyear:6?r=HJhNRFxToB4NcmCRiwbxMJqhCNSTu8q6" allowfullscreen></iframe></div>
         </div>
