--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ We like to build stuff.">
         <div class="container-fluid"><a class="navbar-brand" href="https://brandisbrandisbrand.com"><img src="assets/img/brandisbrandisbrand.svg" style="max-width: 100%;" width="229" height="29"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="https://brandisbrandisbrand.com/index.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://pixelfed.social/cyclingtogether" target="_blank">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/masto/masto.html">Archive</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/video.html">Video</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/index.html#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="video.html">Video</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
