--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ We like to build stuff.">
         {
             "@context": "http://schema.org",
             "@type": "WebSite",
-            "name": "brandisbrandisbrand_rework",
+            "name": "brandisbrandisbrand malweg",
             "url": "https://brandisbrandisbrand.com"
         }
     </script>
@@ -28,7 +28,7 @@ We like to build stuff.">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://pixelfed.social/cyclingtogether" target="_blank">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.brandisbrandisbrand.com/masto/masto.html">Archive</a></li>
+                    <li class="nav-item"><a class="nav-link" href="masto/masto.html">Archive</a></li>
                     <li class="nav-item"><a class="nav-link" href="video.html">Video</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                 </ul>
