--- a/video.html
+++ b/video.html
@@ -28,10 +28,9 @@ We like to build stuff.">
         </div>
     </nav>
     <div class="container" style="margin-top: 60px;max-width: 720px;">
-        <p style="margin: 8px;"><br>Visit our&nbsp;<a href="https://odysee.com/@sharinggoodmoments:2" target="_blank">odysee</a> video channel (youtube coming soon...) to subscribe, comment and like.<br><br>Listen to the&nbsp;&nbsp;<a href="https://cast.postmarketos.org/episode/39-Interview-magdesign/" target="_blank">postmarketos linux podcast</a>&nbsp;and watch the video about <a href="https://odysee.com/@sharinggoodmoments:2/linuxmobile:4" target="_blank">navigating with linuxmobile</a>.<br>^^^ Nerds only ^^^</p>
+        <p style="margin: 8px;"><br>Visit our&nbsp;<a href="https://youtube.com/@malweg" target="_blank">Youtube</a> video channel to subscribe, comment and like.<br><br>Listen to the&nbsp;&nbsp;<a href="https://cast.postmarketos.org/episode/39-Interview-magdesign/" target="_blank">postmarketos linux podcast</a>&nbsp;and watch the video about <a href="https://odysee.com/@sharinggoodmoments:2/linuxmobile:4" target="_blank">navigating with linuxmobile</a>.<br>^^^ Nerds only ^^^</p>
         <div class="row d-lg-flex justify-content-lg-center">
-            <div class="col-md-12" style="margin-left: auto;margin-right: auto;"><iframe id="odysee-iframe" width="360px" height="202px" src="https://odysee.com/$/embed/@sharinggoodmoments:2/malweg_firstyear:6?r=HJhNRFxToB4NcmCRiwbxMJqhCNSTu8q6" allowfullscreen></iframe></div>
-        </div>
+          <div class="col-md-12" style="margin-left: auto;margin-right: auto;"><iframe width="360" height="202" src="https://www.youtube.com/embed/pF--_8PSTes" title="malweg First Year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="row">
             <div class="col-md-12"><iframe id="odysee-iframe" 
  width="360px" height="202px" src="https://odysee.com/$/embed/@sharinggoodmoments:2/Cycling_Balkan:4?r=HJhNRFxToB4NcmCRiwbxMJqhCNSTu8q6" allowfullscreen></iframe>
