--- a/video.html
+++ b/video.html
@@ -32,9 +32,7 @@ We like to build stuff.">
         <div class="row d-lg-flex justify-content-lg-center">
           <div class="col-md-12" style="margin-left: auto;margin-right: auto;"><iframe width="360" height="202" src="https://www.youtube.com/embed/pF--_8PSTes" title="malweg First Year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="row">
-            <div class="col-md-12"><iframe id="odysee-iframe" 
- width="360px" height="202px" src="https://odysee.com/$/embed/@sharinggoodmoments:2/Cycling_Balkan:4?r=HJhNRFxToB4NcmCRiwbxMJqhCNSTu8q6" allowfullscreen></iframe>
-
+           <div class="col-md-12"><iframe width="360" height="202" src="https://www.youtube.com/embed/vEGpT2xEfQw" title="02 Cycling the Balkans" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
         </div>
         <div class="row">
