--- a/video.html
+++ b/video.html
@@ -44,7 +44,7 @@ We like to build stuff.">
 </div>
         </div>
         <div class="row">
-            <div class="col-md-12"><iframe id="odysee-iframe" width="360" height="202" src="https://odysee.com/$/embed/@sharinggoodmoments:2/Iran_2024:2?r=CsiH2tGGnG44ypJbHBu7jjb98TVrsNiW" allowfullscreen></iframe></div>
+            <div class="col-md-12"><iframe width="360" height="202" src="https://www.youtube.com/embed/YP4eYXvtexU" title="04 Cycling Iran 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
