--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ We like to build stuff.">
         </section>
         <section id="contact" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
             <h1 style="font-family: 'Annie Use Your Telescope', serif;">Contact</h1><img src="assets/img/contact.jpg" style="width: 100%;">
-            <p style="padding-top: 10px;">Email / Deltachat:<br>marc brandisbrandisbrand com<br>matrix: @magdesign:tchncs.de<br>Signal: +35 1925858525<br>Whatsapp: +35 1961218077<br><br></p>
+            <p style="padding-top: 10px;">Email:<br>magdesign disroot org<br>matrix: @magdesign:tchncs.de<br>Signal: +35 1925858525<br>Whatsapp: +358 404682974<br><br></p>
         </section>
         <section id="donation" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
             <h1 style="font-family: 'Annie Use Your Telescope', serif;">Support / Donation</h1>
