--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ We like to build stuff.">
         </section>
         <section id="donation" class="justify-content-between" style="font-family: 'Open Sans', sans-serif;padding: 10px;">
             <h1 style="font-family: 'Annie Use Your Telescope', serif;">Support / Donation</h1>
-            <p style="padding-top: 10px;">Btc:<br><sub>bc1qpfljs02fmad7575fs2skjz5u02plzqw0g3xt6d</sub><br><br>Iban €:<br>GB27REVO00997077949372<br>Swift: REVOGB21<br><br>Iban CHF:<br>CH5306300336780940564<br><br>Revolut: @brandisbrand<br><br>Paypal:<br>boost@brandisbrandisbrand.com<br><br><br><br></p>
+            <p style="padding-top: 10px;">Btc:<br><sub>bc1qpfljs02fmad7575fs2skjz5u02plzqw0g3xt6d</sub><br><br>Iban €:<br>LT45 3250 0430 9096 0129<br>Swift: REVOGB21<br><br>Iban CHF:<br>CH5306300336780940564<br><br>Revolut: @brandisbrand<br><br>Paypal:<br>boost@brandisbrandisbrand.com<br><br><br><br></p>
         </section>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
